# keyscan

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
keyscan/: cli.py
keyscan/classifiers/: analyzer.py  patterns.py
keyscan/engine/: scanner.py  template.py  validator.py
keyscan/utils/: logger.py  models.py
scripts/: generate_keyhacks.py
templates/: amplitude-api-keys.yaml  asana-access-token.yaml  aws-assume-role.yaml  aws.yaml  azure-application-insights-app-id-and-api-key.yaml  bazaarvoice-passkey.yaml  browserstack-access-key.yaml  buttercms-api-key.yaml  calendly-api-key.yaml  circleci-access-token.yaml  cloudflare-api-key.yaml  contentful-access-token.yaml  datadog-api-key.yaml  delighted-api-key.yaml  deviant-art-access-token.yaml  deviant-art-secret.yaml  dropbox-api.yaml  firebase-cloud-messaging.yaml  freshdesk-api-key.yaml  github-client-id-and-client-secret.yaml  github-token.yaml  github.yaml  gitlab-personal-access-token.yaml  grafana-access-token.yaml  help-scout-oauth.yaml  heroku-api-key.yaml  infura-api-key.yaml  instagram-basic-display-api-access-token.yaml  instagram-graph-api-access-token.yaml  ipstack-api-key.yaml  iterable-api-key.yaml  keen.io-api-key.yaml  linkedin-oauth.yaml  loqate-api-key.yaml  mailchimp-api-key.yaml  mailgun-private-key.yaml  mapbox-api-key.yaml  microsoft-azure-tenant.yaml  new-relic-personal-api-key-nerdgraph.yaml  new-relic-rest-api.yaml  (+31 more)
